# teramind

./: .gitignore  Cargo.toml  README.md  justfile
crates/teramind/: Cargo.toml
crates/teramind-core/: Cargo.toml
crates/teramind-core/src/: codify.rs  dpop.rs  embed.rs  error.rs  ids.rs  lib.rs  quality.rs  summarize.rs  team.rs  team_event.rs  team_share.rs
crates/teramind-core/src/redact/: mod.rs  patterns.rs  rules.rs
crates/teramind-core/src/types/: agent.rs  file_diff.rs  hit.rs  ingest_event.rs  mod.rs  project.rs  search.rs  session.rs  skill.rs  storage_stats.rs  tool_call.rs  turn.rs
crates/teramind-core/tests/: redaction_corpus.rs
crates/teramind-db/: Cargo.toml
crates/teramind-db/migrations/: 20260513000001_extensions.sql  20260513000002_agents.sql  20260513000003_projects.sql  20260513000004_sessions.sql  20260513000005_turns.sql  20260513000006_tool_calls.sql  20260513000007_file_diffs.sql  20260513000008_skills.sql  20260513000009_storage_stats.sql  20260513000010_traces_fts.sql  20260516000001_embeddings.sql  20260516000002_wiki_pages.sql  20260517000001_team_mode.sql  20260518000001_skill_codifier.sql  20260520000001_dashboard.sql  20260629000001_agents_nulls_not_distinct.sql
crates/teramind-db/src/: error.rs  lib.rs  migrate.rs  pg_supervisor.rs  pool.rs  testing.rs
crates/teramind-db/src/repos/: agent.rs  device.rs  diff.rs  embedding.rs  invite.rs  mod.rs  project.rs  quality_run.rs  search.rs  session.rs  skill.rs  skill_candidate.rs  skill_observation.rs  storage_stats.rs  team_event_log.rs  trace.rs  user.rs  wiki.rs
crates/teramind-db/tests/: dashboard_migration.rs  device_repo.rs  embedding_repo.rs  invite_repo.rs  migrations.rs  perf_vector_search.rs  quality_run_repo.rs  repos.rs  search_repo.rs  skill_candidate_repo.rs  skill_codifier_migration.rs  skill_observation_repo.rs  team_event_log_repo.rs  team_mode_migration.rs  user_repo.rs  wiki_repo.rs
crates/teramind-hook/: Cargo.toml
crates/teramind-hook/src/: auto_recall.rs  hook_input.rs  inbox.rs  lib.rs  main.rs  selftest.rs  spawn.rs  team_share_prompt.rs  translate.rs
crates/teramind-hook/tests/: happy_path.rs  inbox_fallback.rs  perf_cold_start.rs  team_share_prompt.rs
crates/teramind-ipc/: Cargo.toml
crates/teramind-ipc/src/: client.rs  codec.rs  error.rs  grep_fallback_client.rs  lib.rs  proto.rs  rpc_transport.rs  server.rs
crates/teramind-ipc/src/transport/: mod.rs  unix.rs  windows.rs
crates/teramind-ipc/tests/: roundtrip.rs
crates/teramind-mcp/: Cargo.toml
crates/teramind-mcp/src/: lib.rs  main.rs  server.rs  transport_https.rs  transport_local.rs
crates/teramind-mcp/tests/: codify_tool.rs  team_share_set.rs  tools.rs
crates/teramind-search-eval/: Cargo.toml
crates/teramind-search-eval/src/: corpus.rs  gates.rs  generator.rs  harness.rs  lib.rs  main.rs  metrics.rs  queries_bank.rs  reporter.rs  semantic.rs  types.rs
crates/teramind-search-eval/tests/: cli_json_flag.rs  queries_bank.rs
crates/teramind-sync-server/: Cargo.toml  build.rs
crates/teramind-sync-server/src/: admin.rs  auth.rs  config.rs  dashboard_assets.rs  event_log_pruner.rs  event_log_writer.rs  fts_refresh.rs  invite.rs  lib.rs  main.rs  proof.rs  quality_scheduler.rs  server.rs  state.rs  tls.rs  token.rs
crates/teramind-sync-server/src/admin_api/: auth.rs  cookie.rs  error.rs  mod.rs  rate_limit.rs
crates/teramind-sync-server/src/handlers/: events.rs  health.rs  ingest.rs  mod.rs  redeem.rs  rpc.rs
crates/teramind-sync-server/tests/: admin_activity.rs  admin_candidate_name_collision.rs  admin_candidate_reject_then_approve.rs  admin_candidates.rs  admin_health_shape.rs  admin_invite.rs  admin_login.rs  admin_logout.rs  admin_member_devices.rs  admin_members.rs  admin_observations.rs  admin_password_helper.rs  admin_quality.rs  admin_quality_config.rs  admin_quality_since.rs  admin_skills.rs  admin_version_unauth.rs  auth_middleware.rs  binary_smoke.rs  cron_parser_patterns.rs  dashboard_assets.rs  dashboard_disabled_default.rs  dashboard_hashed_asset.rs  dashboard_security_headers.rs  event_log_writer_bus_coverage.rs  events_endpoint.rs  health.rs  ingest_endpoint.rs  quality_scheduler_failure.rs  redeem.rs  rpc_endpoint.rs  team_harness.rs
crates/teramind/src/: cli.rs  ipc.rs  lib.rs  main.rs
crates/teramind/src/commands/: claude.rs  claude_install.rs  claude_uninstall.rs  doctor.rs  feed.rs  init.rs  init_team.rs  mod.rs  redact.rs  reset.rs  restart.rs  search.rs  self_update.rs  sessions.rs  skills.rs  start.rs  status.rs  stop.rs  team.rs  (+2 more)
crates/teramind/tests/: claude_install.rs  doctor_codifier.rs  doctor_embedding.rs  doctor_summarizer.rs  doctor_team_mode.rs  feed_cli.rs  init_team.rs  plugin_manifest.rs  redact_test.rs  search_cli.rs  self_update_local.rs  sessions_show_by_id.rs  sessions_show_json.rs  sessions_show_pending.rs  skills_cli.rs  skills_list_pending.rs  skills_observations.rs  skills_show.rs  smoke_e2e.rs  team_share_set_cli.rs
crates/teramindd/: Cargo.toml
crates/teramindd/src/: app.rs  config.rs  default_config.toml  lib.rs  main.rs  paths.rs  signals.rs
crates/teramindd/tests/: backpressure.rs  codifier_worker_e2e.rs  codify_anthropic_gated.rs  codify_backpressure.rs  codify_bundle_redaction.rs  codify_bundler_budget.rs  codify_privacy.rs  codify_promotion_idempotent.rs  cwd_changed.rs  detector_llm_proposal.rs  detector_problem_fix.rs  detector_tool_chain.rs  embedding_worker_mock.rs  embedding_worker_ollama.rs  embedding_worker_outage.rs  embedding_worker_provider_swap.rs  file_diff_redaction.rs  fs_watcher_attribution.rs  fs_watcher_eacces.rs  fs_watcher_latency.rs  fs_watcher_redaction.rs  idle_session_sweeper.rs  inbox_drain.rs  ingest_e2e.rs  ingest_write_tool_ring.rs  ipc_status.rs  perf_detector_problem_fix.rs  perf_detector_tool_chain.rs  perf_digest_build.rs  perf_ingest_commit.rs  perf_search_blended.rs  perf_traces_fts_refresh.rs  search_degraded_no_provider.rs  search_e2e.rs  summarizer_mock.rs  summarizer_ollama.rs  summarizer_worker_model_not_found.rs  summarizer_worker_outage.rs  team_events_e2e.rs  team_forwarder_e2e.rs  (+5 more)
(+153 files in other folders)
