[workspace]
resolver = "2"
members = [
    "crates/teramind-core",
    "crates/teramind-ipc",
    "crates/teramind-db",
    "crates/teramind-search-eval",
    "crates/teramindd",
    "crates/teramind",
    "crates/teramind-hook",
    "crates/teramind-mcp",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.93.0"

[workspace.dependencies]
anyhow      = "1"
async-trait = "0.1"
clap        = { version = "4", features = ["derive", "env"] }
fastembed              = "4"
flate2      = "1"
futures     = "0.3"
hex         = "0.4"
ignore      = "0.4"
interprocess = { version = "2", features = ["tokio"] }
notify      = "8.2.0"
once_cell   = "1"
pgvector               = { version = "0.4", default-features = false, features = ["sqlx"] }
postgresql_embedded = { version = "0.20", features = ["blocking"] }
postgresql_extensions  = { version = "0.20", features = ["blocking"] }
proptest    = "1"
regex       = "1"
reqwest     = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "blocking", "stream"] }
rmcp        = { version = "1.7", features = ["server", "transport-io"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
sha2        = "0.11"
similar     = "2"
sqlx        = { version = "0.8.6", default-features = false, features = ["runtime-tokio-rustls", "postgres", "uuid", "time", "json", "macros", "migrate"] }
tar         = "0.4"
tempfile    = "3"
thiserror   = "2"
time        = { version = "0.3", features = ["serde", "macros", "formatting", "parsing"] }
tokio       = { version = "1", features = ["full"] }
tracing     = "0.1"
tracing-appender   = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid        = { version = "1", features = ["v4", "v5", "serde"] }
rand        = "0.8"
rand_chacha = "0.3"
toml        = "0.8"

[profile.release]
lto = "thin"
codegen-units = 1
