[workspace]
resolver = "2"
members = [
    "crates/teramind-core",
    "crates/teramind-ipc",
    "crates/teramind-db",
    "crates/teramind-search-eval",
    "crates/teramindd",
    "crates/teramind",
    "crates/teramind-hook",
    "crates/teramind-mcp",
    "crates/teramind-sync-server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.93.0"

[workspace.dependencies]
anyhow           = "1"
argon2      = "0.5"
async-recursion  = "1"
async-trait      = "0.1"
axum            = { version = "0.8", default-features = false, features = ["http1", "http2", "json", "tokio", "matched-path"] }
axum-server     = { version = "0.8", default-features = false, features = ["tls-rustls"] }
base32          = "0.5"
base64          = "0.22"
clap        = { version = "4", features = ["derive", "env"] }
cron        = "0.16"
ed25519-dalek   = { version = "2", default-features = false, features = ["std", "rand_core"] }
parking_lot     = "0.12"
rustls-pemfile  = "2"
tokio-rustls    = "0.26"
tower           = { version = "0.5", default-features = false, features = ["util"] }
tower-http      = { version = "0.6", default-features = false, features = ["limit", "trace"] }
fastembed              = { version = "5", default-features = false, features = ["ort-download-binaries-rustls-tls", "hf-hub-rustls-tls", "image-models"] }
flate2      = "1"
futures     = "0.3"
futures-util = "0.3"
hex         = "0.4"
hmac        = "0.13"
ignore      = "0.4"
include_dir = "0.7"
libc        = "0.2"
interprocess = { version = "2", features = ["tokio"] }
notify      = "8.2.0"
once_cell   = "1"
pgvector               = { version = "0.4", default-features = false, features = ["sqlx"] }
postgresql_embedded = { version = "0.20", default-features = false, features = ["rustls", "blocking", "theseus"] }
postgresql_extensions  = { version = "0.20", default-features = false, features = ["rustls", "blocking", "portal-corp", "steampipe"] }
proptest    = "1"
regex       = "1"
reqwest     = { version = "0.13", default-features = false, features = ["rustls", "json", "blocking", "stream"] }
rmcp        = { version = "1.7", features = ["server", "transport-io"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
sha2        = "0.11"
similar     = "3.1"
sqlx        = { version = "0.8.6", default-features = false, features = ["runtime-tokio-rustls", "postgres", "uuid", "time", "json", "macros", "migrate"] }
tar         = "0.4"
tempfile    = "3"
thiserror   = "2"
time        = { version = "0.3", features = ["serde", "macros", "formatting", "parsing"] }
tokio       = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.29", default-features = false, features = ["rustls-tls-webpki-roots", "connect"] }
tracing     = "0.1"
tracing-appender   = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid        = { version = "1", features = ["v4", "v5", "serde"] }
hostname    = "0.4"
rand        = "0.10"
rand_chacha = "0.10"
rpassword   = "7"
toml        = "1.1"

[profile.release]
lto = "thin"
codegen-units = 1
