[package]
name = "teramind-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
uuid       = { workspace = true }
time       = { workspace = true }
regex      = { workspace = true }
once_cell  = { workspace = true }
sha2       = { workspace = true }
hex        = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
