[package]
name = "teramind-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow        = { workspace = true }
async-trait   = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
thiserror     = { workspace = true }
toml          = { workspace = true }
uuid          = { workspace = true }
time          = { workspace = true }
regex         = { workspace = true }
once_cell     = { workspace = true }
sha2          = { workspace = true }
hex           = { workspace = true }
base64        = { workspace = true }
ed25519-dalek = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
rand     = { workspace = true }
tempfile = { workspace = true }
uuid     = { workspace = true }
