[package]
name = "teramind-db"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
testing = []

[dependencies]
teramind-core = { path = "../teramind-core" }
anyhow      = { workspace = true }
sqlx        = { workspace = true }
pgvector    = { workspace = true }
postgresql_embedded = { workspace = true }
postgresql_extensions = { workspace = true }
tokio       = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
uuid        = { workspace = true }
time        = { workspace = true }
async-trait = { workspace = true }
tempfile    = { workspace = true }
libc        = { workspace = true }

[dev-dependencies]
anyhow   = { workspace = true }
