[package]
name = "teramind-hook"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "teramind_hook"
path = "src/lib.rs"

[[bin]]
name = "teramind-hook"
path = "src/main.rs"

[dependencies]
teramind-core = { path = "../teramind-core" }
teramind-ipc  = { path = "../teramind-ipc" }
teramind-mcp  = { path = "../teramind-mcp" }
anyhow      = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
tokio       = { workspace = true }
uuid        = { workspace = true }
time        = { workspace = true }
clap        = { workspace = true }
tracing     = { workspace = true }
ignore      = { workspace = true }

[dev-dependencies]
tempfile      = { workspace = true }
teramind-db   = { path = "../teramind-db", features = ["testing"] }
teramindd     = { path = "../teramindd" }
sqlx          = { workspace = true }
ed25519-dalek = { workspace = true }
rand          = { workspace = true }
uuid          = { workspace = true }
time          = { workspace = true }
