[package]
name = "teramind-ipc"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
teramind-core = { path = "../teramind-core" }
serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
tokio        = { workspace = true }
async-trait  = { workspace = true }
futures      = { workspace = true }
interprocess = { workspace = true }
tracing      = { workspace = true }
uuid         = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
time     = { workspace = true }
