[package]
name = "teramind-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "teramind_mcp"
path = "src/lib.rs"

[[bin]]
name = "teramind-mcp"
path = "src/main.rs"

[dependencies]
teramind-core = { path = "../teramind-core" }
teramind-ipc  = { path = "../teramind-ipc" }
rmcp        = { workspace = true }
anyhow      = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tempfile    = { workspace = true }
tokio       = { workspace = true }
async-trait = { workspace = true }
teramind-ipc = { path = "../teramind-ipc" }
