[package]
name = "teramind-search-eval"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "teramind-search-eval"
path = "src/main.rs"

[lib]
name = "teramind_search_eval"
path = "src/lib.rs"

[dependencies]
teramind-core = { path = "../teramind-core" }
teramind-db   = { path = "../teramind-db" }
teramindd     = { path = "../teramindd" }
anyhow      = { workspace = true }
clap        = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
toml        = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }
tracing-subscriber = { workspace = true }
sqlx        = { workspace = true }
time        = { workspace = true }
uuid        = { workspace = true }
rand        = { workspace = true }
rand_chacha = { workspace = true }
sha2        = { workspace = true }
hex         = { workspace = true }
tempfile    = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
