[package]
name = "teramind-sync-server"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "teramind_sync_server"
path = "src/lib.rs"

[[bin]]
name = "teramind-sync-server"
path = "src/main.rs"

[dependencies]
teramind-core = { path = "../teramind-core" }
teramind-db   = { path = "../teramind-db" }
teramind-ipc  = { path = "../teramind-ipc" }
teramindd     = { path = "../teramindd" }

anyhow         = { workspace = true }
chrono         = "0.4"
argon2         = { workspace = true }
async-trait    = { workspace = true }
axum           = { workspace = true, features = ["ws", "query"] }
axum-server    = { workspace = true }
base32         = { workspace = true }
base64         = { workspace = true }
clap           = { workspace = true }
cron           = { workspace = true }
ed25519-dalek  = { workspace = true }
hex            = { workspace = true }
hmac           = { workspace = true }
include_dir    = { workspace = true }
parking_lot    = { workspace = true }
rand           = { workspace = true }
rpassword      = { workspace = true }
rustls-pemfile = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
sha2           = { workspace = true }
sqlx           = { workspace = true }
thiserror      = { workspace = true }
time           = { workspace = true }
tokio          = { workspace = true }
tokio-rustls   = { workspace = true }
toml           = { workspace = true }
tower          = { workspace = true }
tower-http     = { workspace = true }
tracing        = { workspace = true }
tracing-appender   = { workspace = true }
tracing-subscriber = { workspace = true }
uuid           = { workspace = true }

[dev-dependencies]
tempfile   = { workspace = true }
proptest   = { workspace = true }
reqwest    = { workspace = true }
rand_chacha = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = "0.3"
teramind-db  = { path = "../teramind-db", features = ["testing"] }
