[package]
name = "teramind-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "teramind"
path = "src/main.rs"

[dependencies]
teramind-core = { path = "../teramind-core" }
teramind-ipc  = { path = "../teramind-ipc" }
teramindd     = { path = "../teramindd" }
tokio       = { workspace = true }
anyhow      = { workspace = true }
clap        = { workspace = true }
tracing     = { workspace = true }
tracing-subscriber = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
time        = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
libc     = "0.2"
