[package]
name = "teramind-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "teramind"
path = "src/main.rs"

[dependencies]
teramind-core = { path = "../teramind-core" }
teramind-ipc  = { path = "../teramind-ipc" }
teramindd     = { path = "../teramindd" }
anyhow      = { workspace = true }
clap        = { workspace = true }
flate2      = { workspace = true }
hex         = { workspace = true }
reqwest     = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
sha2        = { workspace = true }
tar         = { workspace = true }
tempfile    = { workspace = true }
time        = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
libc     = "0.2"
