[package]
name = "teramind-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "teramind"
path = "src/main.rs"

[lib]
name = "teramind"
path = "src/lib.rs"

[dependencies]
teramind-core = { path = "../teramind-core" }
teramind-ipc  = { path = "../teramind-ipc" }
teramindd     = { path = "../teramindd" }
teramind-search-eval = { path = "../teramind-search-eval" }
anyhow      = { workspace = true }
base64      = { workspace = true }
clap        = { workspace = true }
ed25519-dalek = { workspace = true }
flate2      = { workspace = true }
hex         = { workspace = true }
hostname    = { workspace = true }
rand        = { workspace = true }
reqwest     = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
sha2        = { workspace = true }
tar         = { workspace = true }
tempfile    = { workspace = true }
time        = { workspace = true }
tokio       = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
uuid        = { workspace = true }
tracing     = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
axum             = { workspace = true }
libc             = "0.2"
teramind-db      = { path = "../teramind-db", features = ["testing"] }
teramind-sync-server = { path = "../teramind-sync-server" }
tokio            = { workspace = true }
