[package]
name = "teramindd"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "teramindd"
path = "src/lib.rs"

[[bin]]
name = "teramindd"
path = "src/main.rs"

[dependencies]
teramind-core = { path = "../teramind-core" }
teramind-ipc  = { path = "../teramind-ipc" }
teramind-db   = { path = "../teramind-db" }
tokio       = { workspace = true }
anyhow      = { workspace = true }
fastembed   = { workspace = true }
pgvector    = { workspace = true }
postgresql_extensions = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender   = { workspace = true }
clap        = { workspace = true }
time        = { workspace = true }
uuid        = { workspace = true }
async-recursion = { workspace = true }
async-trait = { workspace = true }
hex         = { workspace = true }
ignore      = { workspace = true }
notify      = { workspace = true }
sha2        = { workspace = true }
similar     = { workspace = true }
toml        = { workspace = true }
reqwest     = { workspace = true }
sqlx        = { workspace = true }
parking_lot = { workspace = true }
ed25519-dalek = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = "0.3"
base64 = { workspace = true }
once_cell   = { workspace = true }
regex       = { workspace = true }

[dev-dependencies]
tempfile    = { workspace = true }
proptest    = { workspace = true }
axum        = { workspace = true }
base64      = { workspace = true }
ed25519-dalek = { workspace = true }
rand        = { workspace = true }
serde_json  = { workspace = true }
teramind-sync-server = { path = "../teramind-sync-server" }
teramind-mcp = { path = "../teramind-mcp" }
time        = { workspace = true }
uuid        = { workspace = true }
reqwest     = { workspace = true }
